# SOARS-Baseline

./: AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  README.md  config.h.cmake  soars-xml.dtd
fftwcpp/: CMakeLists.txt  fftwcpp.cpp  fftwcpp.h  fftwcpp_templates.h
pugixml/: CMakeLists.txt
sgp4/: CMakeLists.txt  SGP4.cu  SGP4.cuh  astMath.cu  astMath.cuh  astTime.cu  astTime.cuh
src/: CMakeLists.txt  rsantenna.cu  rsantenna.cuh  rsdebug.cu  rsdebug.cuh  rsdsp.cu  rsdsp.cuh  rsgeometry.cu  rsgeometry.cuh  rshdf5.cu  rshdf5.cuh  rsinterp.cu  rsinterp.cuh  rsmain.cu  rsmultipath.cu  rsmultipath.cuh  rsnoise.cu  rsnoise.cuh  rsobject.cu  rsobject.cuh  rsparameters.cu  rsparameters.cuh  rspath.cu  rspath.cuh  rspattern.cu  rspattern.cuh  rsplatform.cu  rsplatform.cuh  rspolarize.cu  rspolarize.cuh  rsportable.cu  rsportable.cuh  rspulserender.cu  rspulserender.cuh  rspython.cu  rspython.cuh  rsradar.cu  rsradar.cuh  rsradarwaveform.cu  rsradarwaveform.cuh  (+19 more)
test/unit_tests/: CMakeLists.txt  clock_test.cu  fft_test.cpp  filter_test.cu  noisegen_test.cu  path_test.cu  signal_test.cu  timing_test.cu  upsample_test.cpp
utilities/: CMakeLists.txt  README  cluttergen.cpp  cluttergen2d.cpp  csv2antenna.c  h52raw.cpp
